<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context="com.runzii.cyou.ui.init.LoginActivity">


    <FrameLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.flaviofaria.kenburnsview.KenBurnsView
            android:id="@+id/login_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/vivian20" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/app_info_brief"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/number_container"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/app_info_brief"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_huge" />

            <LinearLayout
                android:id="@+id/number_container"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_above="@+id/keyboard_frame"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_country_num"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="+86"
                    android:background="@color/black_alpha_2"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_large" />

                <EditText
                    android:id="@+id/number"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@color/black_alpha_2"
                    android:editable="false"
                    android:hint="@string/prompt_use_phone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white_alpha_2"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_size_large" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/selector_alpha_button_orange"
                    android:text="@string/action_sign_in_short"
                    android:textColor="@color/white" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/keyboard_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/regist_button_container"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/black_alpha_2"
                    android:editable="false"
                    android:gravity="center"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white_alpha_2"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/text_size_large"
                    android:visibility="gone" />


                <android.inputmethodservice.KeyboardView
                    android:id="@+id/keyboard_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:keyBackground="@drawable/selector_alpha_button_number"
                    android:keyTextColor="@color/white" />
            </LinearLayout>


            <FrameLayout
                android:id="@+id/regist_button_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <Button
                    android:id="@+id/regist_button"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@drawable/selector_alpha_button_number"
                    android:text="@string/action_weibo"
                    android:textColor="@color/orange_800"
                    android:textStyle="bold" />

            </FrameLayout>

        </RelativeLayout>
    </FrameLayout>


</FrameLayout>

